--- a/public/index.html
+++ b/public/index.html
@@ -7,17 +7,17 @@
   <meta content='#0A8FDC' name='theme-color' />
   <link href='%PUBLIC_URL%/logo192.png' rel='apple-touch-icon' />
   <meta content='React Ant Design admin template' name='description' />
-  <meta property='og:title' content='Crema- React Ant Design admin Template' />
-  <meta property='og:description' content='Crema is purely based on Ant Design UI components' />
+  <meta property='og:title' content='Tween CMS' />
+  <meta property='og:description' content='Tween CMS' />
   <meta property='og:image' content='%PUBLIC_URL%/logo512.png' />
-  <meta property='og:site_name' content='Crema Ant Design admin Template' />
+  <meta property='og:site_name' content='Tween CMS' />
   <script async defer
           src='https://maps.googleapis.com/maps/api/js?v=3.exp&libraries=places,geometry,drawing&key=AIzaSyBtgCpqXBu7Mdl2bzhhHnutAroyEteQo9s'>
   </script>
   <link rel='stylesheet' href='/loader.css' />
   <link href='https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600&display=swap'
         rel='stylesheet'>
-  <title>Crema-Ant Design admin Template</title>
+  <title>Tween CMS</title>
 </head>
 <body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
